--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ html
       <a-marker preset="hiro">
         <!-- 3D 模型放這 (官方示範恐龍模型) -->
         <a-entity
-          gltf-model="url(models/榕仔.glb)" 
+          gltf-model="url(models/榕仔.gltf)" 
           scale="1 1 1"
           rotation="0 180 0"
           position="0 0 0">
