--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
-html
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple WebAR Example</title>
+    <title>WebAR with Blender Animation</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
@@ -11,14 +10,15 @@ html
   </head>
   <body>
     <a-scene embedded arjs>
-      <!-- 使用 Hiro Marker -->
+      <!-- Marker (Hiro marker) -->
       <a-marker preset="hiro">
-        <!-- 3D 模型放這 (官方示範恐龍模型) -->
+        <!-- 匯出的 glb 模型 -->
         <a-entity
-          gltf-model="url(models/榕仔.gltf)" 
-          scale="1 1 1"
+          gltf-model="models/榕仔.gltf"
+          scale="0.5 0.5 0.5"
           rotation="0 180 0"
-          position="0 0 0">
+          position="0 0 0"
+          animation-mixer>
         </a-entity>
       </a-marker>
       <a-entity camera></a-entity>
