--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a-marker preset="hiro">
         <!-- 匯出的 glb 模型 -->
         <a-entity
-          gltf-model="models/榕仔.gltf"
+          gltf-model="models/榕仔1.glb"
           scale="0.5 0.5 0.5"
           rotation="0 180 0"
           position="0 0 0"
