--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+html
 <!DOCTYPE html>
 <html>
   <head>
@@ -10,9 +11,8 @@
   </head>
   <body>
     <a-scene embedded arjs>
-      <!-- Marker (Hiro marker) -->
+      <!-- Hiro marker -->
       <a-marker preset="hiro">
-        <!-- 匯出的 glb 模型 -->
         <a-entity
           gltf-model="models/榕仔1.glb"
           scale="0.5 0.5 0.5"
