--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ html
       <!-- Hiro marker -->
       <a-marker preset="hiro">
         <a-entity
-          gltf-model="models/榕仔1.glb"
+          gltf-model="models/tree.glb"
           scale="0.5 0.5 0.5"
           rotation="0 180 0"
           position="0 0 0"
