--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>WebAR with Smooth + Delay Hide</title>
+    <title>AR.js Marker Once Only</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
@@ -9,51 +9,45 @@
     </style>
   </head>
   <body>
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam; detectionMode: mono_and_matrix;">
+    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;">
       
-      <!-- Hiro marker with smooth settings -->
-      <a-marker 
-        preset="hiro" 
-        emitevents="true" 
-        smooth="true" 
-        smoothCount="10" 
-        smoothTolerance="0.01" 
-        smoothThreshold="5"
-        id="hiroMarker">
+      <!-- marker only used for觸發 -->
+      <a-marker preset="hiro" emitevents="true" id="hiroMarker"></a-marker>
 
-        <a-entity 
-          id="treeModel"
-          gltf-model="models/tree.glb"
-          scale="0.5 0.5 0.5"
-          rotation="0 0 0"
-          position="0 0 0"
-          visible="false"   <!-- 一開始先隱藏 -->
-          animation-mixer
-          animation="property: position; dir: alternate; dur: 2000; easing: easeInOutSine; loop: true; to: 0 0.3 0">
-        </a-entity>
-      </a-marker>
+      <!-- 模型一開始隱藏, 掃到後固定在場景 -->
+      <a-entity id="treeModel"
+        gltf-model="models/tree.glb"
+        scale="0.5 0.5 0.5"
+        rotation="0 0 0"
+        position="0 0 0"
+        visible="false"
+        animation-mixer>
+      </a-entity>
 
-      <!-- 相機 -->
       <a-entity camera></a-entity>
     </a-scene>
 
     <script>
       const marker = document.querySelector('#hiroMarker');
       const model = document.querySelector('#treeModel');
-      let hideTimeout;
+      let placed = false;
 
-      // 當偵測到 marker
       marker.addEventListener('markerFound', () => {
-        clearTimeout(hideTimeout);
-        model.setAttribute('visible', true);
-      });
+        if (!placed) {
+          // 取得當下 marker 的位置與方向，放到場景裡
+          const markerObj = marker.object3D;
+          const pos = new THREE.Vector3();
+          const rot = new THREE.Quaternion();
+          const scale = new THREE.Vector3();
+          markerObj.matrixWorld.decompose(pos, rot, scale);
 
-      // 當 marker 消失
-      marker.addEventListener('markerLost', () => {
-        // 延遲 500ms 再隱藏，避免抖動造成的閃爍
-        hideTimeout = setTimeout(() => {
-          model.setAttribute('visible', false);
-        }, 500);
+          model.object3D.position.copy(pos);
+          model.object3D.quaternion.copy(rot);
+          model.object3D.scale.copy(scale);
+
+          model.setAttribute('visible', true);
+          placed = true; // 只放一次
+        }
       });
     </script>
   </body>
