--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AR.js Marker Once Only</title>
+    <title>WebAR with Smooth + Delay Hide</title>
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
@@ -9,45 +9,69 @@
     </style>
   </head>
   <body>
-    <a-scene embedded arjs="trackingMethod: best; sourceType: webcam;">
-      
-      <!-- marker only used for觸發 -->
-      <a-marker preset="hiro" emitevents="true" id="hiroMarker"></a-marker>
+    <a-scene
+      embedded
+      arjs="trackingMethod: best; sourceType: webcam; detectionMode: mono_and_matrix;"
+    >
+      <!-- Hiro marker with smooth settings -->
+      <a-marker
+        preset="hiro"
+        emitevents="true"
+        smooth="true"
+        smoothCount="12"
+        smoothTolerance="0.01"
+        smoothThreshold="5"
+        id="hiroMarker"
+      >
+        <a-entity
+          id="treeModel"
+          gltf-model="models/tree.glb"
+          scale="0.5 0.5 0.5"
+          rotation="0 180 0"
+          position="0 0 0"
+          animation-mixer
+          animation="property: position; dir: alternate; dur: 2000; easing: easeInOutSine; loop: true; to: 0 0.3 0"
+        >
+        </a-entity>
+      </a-marker>
 
-      <!-- 模型一開始隱藏, 掃到後固定在場景 -->
-      <a-entity id="treeModel"
-        gltf-model="models/tree.glb"
-        scale="0.5 0.5 0.5"
-        rotation="0 0 0"
-        position="0 0 0"
-        visible="false"
-        animation-mixer>
-      </a-entity>
-
+      <!-- Camera -->
       <a-entity camera></a-entity>
     </a-scene>
 
     <script>
       const marker = document.querySelector('#hiroMarker');
       const model = document.querySelector('#treeModel');
-      let placed = false;
+      let hideTimeout;
 
-      marker.addEventListener('markerFound', () => {
-        if (!placed) {
-          // 取得當下 marker 的位置與方向，放到場景裡
-          const markerObj = marker.object3D;
-          const pos = new THREE.Vector3();
-          const rot = new THREE.Quaternion();
-          const scale = new THREE.Vector3();
-          markerObj.matrixWorld.decompose(pos, rot, scale);
+      // 一開始先隱藏
+      model.setAttribute('visible', false);
 
-          model.object3D.position.copy(pos);
-          model.object3D.quaternion.copy(rot);
-          model.object3D.scale.copy(scale);
-
+      function showModel() {
+        clearTimeout(hideTimeout);
+        if (!model.getAttribute('visible')) {
           model.setAttribute('visible', true);
-          placed = true; // 只放一次
+          console.log('模型顯示');
         }
+      }
+
+      function hideModel() {
+        if (model.getAttribute('visible')) {
+          model.setAttribute('visible', false);
+          console.log('模型隱藏');
+        }
+      }
+
+      // 偵測到 marker
+      marker.addEventListener('markerFound', () => {
+        showModel();
+      });
+
+      // marker 消失 → 延遲隱藏
+      marker.addEventListener('markerLost', () => {
+        hideTimeout = setTimeout(() => {
+          hideModel();
+        }, 1000); // 延遲 1 秒再隱藏，避免閃爍
       });
     </script>
   </body>
