--- a/index.html
+++ b/index.html
@@ -5,10 +5,76 @@
     <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <style>
-      body { margin: 0; overflow: hidden; }
+      body {
+        margin: 0;
+        overflow: hidden;
+        font-family: "Microsoft JhengHei", sans-serif;
+      }
+
+      /* Loading 畫面 */
+      #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #4facfe, #00f2fe);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 9999;
+        color: white;
+        font-size: 1.5em;
+        transition: opacity 0.5s ease;
+      }
+
+      .spinner {
+        border: 6px solid rgba(255, 255, 255, 0.3);
+        border-top: 6px solid #fff;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 1s linear infinite;
+        margin-bottom: 20px;
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+      /* 提示文字 */
+      #hint {
+        position: fixed;
+        bottom: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0,0,0,0.6);
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 8px;
+        font-size: 1.1em;
+        z-index: 999;
+        animation: fadeInOut 3s ease-in-out infinite;
+      }
+
+      @keyframes fadeInOut {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0.5; }
+      }
     </style>
   </head>
   <body>
+    <!-- Loading 畫面 -->
+    <div id="loading-screen">
+      <div class="spinner"></div>
+      <div>正在載入 3D 模型，請稍候...</div>
+    </div>
+
+    <!-- 提示文字 -->
+    <div id="hint">請將相機對準 Hiro 標記</div>
+
     <a-scene
       embedded
       arjs="trackingMethod: best; sourceType: webcam; detectionMode: mono_and_matrix;"
@@ -42,10 +108,18 @@
     <script>
       const marker = document.querySelector('#hiroMarker');
       const model = document.querySelector('#treeModel');
+      const loadingScreen = document.querySelector('#loading-screen');
       let hideTimeout;
 
-      // 一開始先隱藏
+      // 一開始隱藏模型
       model.setAttribute('visible', false);
+
+      // 模型載入完成後 -> 關閉 Loading 畫面
+      model.addEventListener("model-loaded", () => {
+        console.log("模型載入完成");
+        loadingScreen.style.opacity = "0";
+        setTimeout(() => loadingScreen.style.display = "none", 600);
+      });
 
       function showModel() {
         clearTimeout(hideTimeout);
