--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <!-- 提示文字 -->
-    <div id="hint">請將相機對準 Hiro 標記</div>
+    <div id="hint">捲捲胖胖</div>
 
     <a-scene
       embedded
@@ -93,7 +93,7 @@
           id="treeModel"
           gltf-model="models/tree.glb"
           scale="0.5 0.5 0.5"
-          rotation="0 180 0"
+          rotation="0 0 0"
           position="0 0 0"
           animation-mixer
           animation="property: position; dir: alternate; dur: 2000; easing: easeInOutSine; loop: true; to: 0 0.3 0"
