--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         padding: 10px 20px;
         border-radius: 8px;
         font-size: 1.1em;
-        z-index: 900; /* 在 SVG 下層 */
+        z-index: 2000; /* ✅ 提示文字層級最大，永遠在最上 */
         animation: fadeInOut 3s ease-in-out infinite;
       }
 
@@ -72,8 +72,8 @@
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 950; /* 在提示文字之上，但在 loading 之下 */
-        pointer-events: none; /* 不影響點擊操作 */
+        z-index: 1000; /* ✅ 比提示文字低，永遠不會蓋到 */
+        pointer-events: none; /* 不影響操作 */
       }
     </style>
   </head>
@@ -84,8 +84,11 @@
       <div>正在載入 3D 模型，請稍候...</div>
     </div>
 
-    <!-- SVG 外框 (從 GitHub 載入) -->
-    <object id="frame-svg" type="image/svg+xml" data="BG/BG.svg"></object>
+    <!-- SVG 外框 (直接嵌入，強制拉伸至全畫面) -->
+    <svg id="frame-svg" xmlns="BG/BG.svg">
+      <!-- ⚠️ 把你的 BG.svg 內容貼在這裡 -->
+      <rect x="0" y="0" width="100%" height="100%" fill="none" stroke="red" stroke-width="20"/>
+    </svg>
 
     <!-- 提示文字 -->
     <div id="hint">捲捲胖胖</div>
@@ -127,17 +130,16 @@
       const loadingScreen = document.querySelector('#loading-screen');
       let hideTimeout;
 
-      // ✅ 一開始隱藏模型
+      // 一開始隱藏模型
       model.setAttribute('visible', false);
 
-      // ✅ 模型載入完成後 -> 關閉 Loading 畫面
+      // 模型載入完成後 -> 關閉 Loading 畫面
       model.addEventListener("model-loaded", () => {
         console.log("模型載入完成");
         loadingScreen.style.opacity = "0";
         setTimeout(() => loadingScreen.style.display = "none", 600);
       });
 
-      // ✅ 顯示模型
       function showModel() {
         clearTimeout(hideTimeout);
         if (!model.getAttribute('visible')) {
@@ -146,7 +148,6 @@
         }
       }
 
-      // ✅ 隱藏模型
       function hideModel() {
         if (model.getAttribute('visible')) {
           model.setAttribute('visible', false);
@@ -154,12 +155,9 @@
         }
       }
 
-      // ✅ 偵測到 marker
       marker.addEventListener('markerFound', showModel);
-
-      // ✅ marker 消失 → 延遲隱藏
       marker.addEventListener('markerLost', () => {
-        hideTimeout = setTimeout(hideModel, 1000); // 延遲 1 秒再隱藏
+        hideTimeout = setTimeout(hideModel, 1000);
       });
     </script>
   </body>
