--- a/index.html
+++ b/index.html
@@ -84,10 +84,35 @@
       <div>正在載入 3D 模型，請稍候...</div>
     </div>
 
-    <!-- SVG 外框 (直接嵌入，強制拉伸至全畫面) -->
-    <svg id="frame-svg" xmlns="BG/BG.svg">
-      <!-- ⚠️ 把你的 BG.svg 內容貼在這裡 -->
-      <rect x="0" y="0" width="100%" height="100%" fill="none" stroke="red" stroke-width="20"/>
+    <!-- SVG 外框 (整合 BG.svg 的內容) -->
+    <svg id="frame-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285.75 508" preserveAspectRatio="xMidYMid meet">
+      <defs id="defs1" />
+      <g id="layer1">
+        <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
+              width="287.49677" height="50.923008" x="-1.6858945" y="-1.1239296" />
+        <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
+              width="287.49677" height="50.923008" x="-0.70703161" y="458.04077" />
+        <rect style="fill:#ffd5d5;stroke-width:22.3567;stroke-linecap:square"
+              width="494.83267" height="40.243237" x="9.4845104" y="-285.48715"
+              transform="matrix(0.00105052,0.99999945,-0.99999516,0.00311209,0,0)" />
+        <rect style="fill:#ffd5d5;stroke-width:22.3567;stroke-linecap:square"
+              width="494.83267" height="40.243237" x="10.45767" y="-40.021164"
+              transform="matrix(0.00105052,0.99999945,-0.99999516,0.00311209,0,0)" />
+        <rect style="fill:#ff8080;stroke-width:60.8981;stroke-linecap:square"
+              width="154.70169" height="51.918198" x="67.184807" y="428.0621" />
+        <text style="font-size:32.0642px;fill:#ffd4d4;fill-opacity:1;stroke-width:304.474"
+              x="87.052063" y="442.0806" transform="scale(0.94646367,1.0565646)">捲捲可愛</text>
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:61.7984;stroke-linecap:square"
+              width="4.2573333" height="424.39575" x="248.32335" y="41.787487" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:61.7984;stroke-linecap:square"
+              width="4.2573333" height="424.39575" x="33.008163" y="41.178467" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:57.2492;stroke-linecap:square"
+              width="219.27122" height="6.3640318" x="33.171803" y="40.257904" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:22.1615;stroke-linecap:square"
+              width="32.858273" height="6.3640318" x="219.3349" y="461.49274" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:22.9667;stroke-linecap:square"
+              width="35.289234" height="6.3640318" x="33.214214" y="461.57034" />
+      </g>
     </svg>
 
     <!-- 提示文字 -->
@@ -112,7 +137,7 @@
           id="treeModel"
           gltf-model="models/tree.glb"
           scale="0.5 0.5 0.5"
-          rotation="90 0 0"
+          rotation="0 0 90"
           position="0 0 0"
           animation-mixer
           animation="property: position; dir: alternate; dur: 2000; easing: easeInOutSine; loop: true; to: 0 0.3 0"
