--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       /* 提示文字 */
       #hint {
         position: fixed;
-        bottom: 20px;
+        bottom: 40px;
         left: 50%;
         transform: translateX(-50%);
         background: rgba(0,0,0,0.6);
@@ -66,15 +66,15 @@
       }
 
       /* SVG 外框層 */
-      #frame-svg {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        z-index: 1000; /* ✅ 比提示文字低，永遠不會蓋到 */
-        pointer-events: none; /* 不影響操作 */
-      }
+#frame-svg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 500;   /* ✅ 低於提示文字 */
+  pointer-events: none;
+}
     </style>
   </head>
   <body>
@@ -85,35 +85,19 @@
     </div>
 
     <!-- SVG 外框 (整合 BG.svg 的內容) -->
-    <svg id="frame-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285.75 508" preserveAspectRatio="xMidYMid meet">
-      <defs id="defs1" />
-      <g id="layer1">
-        <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
-              width="287.49677" height="50.923008" x="-1.6858945" y="-1.1239296" />
-        <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
-              width="287.49677" height="50.923008" x="-0.70703161" y="458.04077" />
-        <rect style="fill:#ffd5d5;stroke-width:22.3567;stroke-linecap:square"
-              width="494.83267" height="40.243237" x="9.4845104" y="-285.48715"
-              transform="matrix(0.00105052,0.99999945,-0.99999516,0.00311209,0,0)" />
-        <rect style="fill:#ffd5d5;stroke-width:22.3567;stroke-linecap:square"
-              width="494.83267" height="40.243237" x="10.45767" y="-40.021164"
-              transform="matrix(0.00105052,0.99999945,-0.99999516,0.00311209,0,0)" />
-        <rect style="fill:#ff8080;stroke-width:60.8981;stroke-linecap:square"
-              width="154.70169" height="51.918198" x="67.184807" y="428.0621" />
-        <text style="font-size:32.0642px;fill:#ffd4d4;fill-opacity:1;stroke-width:304.474"
-              x="87.052063" y="442.0806" transform="scale(0.94646367,1.0565646)">捲捲可愛</text>
-        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:61.7984;stroke-linecap:square"
-              width="4.2573333" height="424.39575" x="248.32335" y="41.787487" />
-        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:61.7984;stroke-linecap:square"
-              width="4.2573333" height="424.39575" x="33.008163" y="41.178467" />
-        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:57.2492;stroke-linecap:square"
-              width="219.27122" height="6.3640318" x="33.171803" y="40.257904" />
-        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:22.1615;stroke-linecap:square"
-              width="32.858273" height="6.3640318" x="219.3349" y="461.49274" />
-        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:22.9667;stroke-linecap:square"
-              width="35.289234" height="6.3640318" x="33.214214" y="461.57034" />
-      </g>
-    </svg>
+    <svg id="frame-svg"
+     xmlns="http://www.w3.org/2000/svg"
+     viewBox="0 0 1080 1920"
+     preserveAspectRatio="none">
+  <rect x="0" y="0" width="1080" height="80" fill="#ffd5d5"/>
+  <rect x="0" y="1840" width="1080" height="80" fill="#ffd5d5"/>
+  <rect x="0" y="0" width="80" height="1920" fill="#ff8080"/>
+  <rect x="1000" y="0" width="80" height="1920" fill="#ff8080"/>
+  <text x="540" y="1860"
+        text-anchor="middle"
+        font-size="64"
+        fill="#ffd4d4">捲捲可愛</text>
+</svg>
 
     <!-- 提示文字 -->
     <div id="hint">捲捲胖胖</div>
