--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </div>
 
     <!-- SVG 外框 (整合 BG.svg 的內容) -->
-    <svg id="frame-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285.75 508" preserveAspectRatio="xMidYMid meet">
+    <svg id="frame-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285.75 508" preserveAspectRatio="none">
       <defs id="defs1" />
       <g id="layer1">
         <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
