--- a/index.html
+++ b/index.html
@@ -1,46 +1,187 @@
-<html>
+<!DOCTYPE html>
+<html lang="zh-Hant">
   <head>
-    <script src="https://aframe.io/releases/1.5.0/aframe.min.js"></script>
+    <meta charset="utf-8" />
+    <title>WebAR with Smooth + Delay Hide</title>
+    <script src="https://aframe.io/releases/1.6.0/aframe.min.js"></script>
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <style>
+      body {
+        margin: 0;
+        overflow: hidden;
+        font-family: "Microsoft JhengHei", sans-serif;
+      }
+
+      /* Loading 畫面 */
+      #loading-screen {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, #4facfe, #00f2fe);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        z-index: 9999;
+        color: white;
+        font-size: 1.5em;
+        transition: opacity 0.5s ease;
+      }
+
+      .spinner {
+        border: 6px solid rgba(255, 255, 255, 0.3);
+        border-top: 6px solid #fff;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        animation: spin 1s linear infinite;
+        margin-bottom: 20px;
+      }
+
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
+
+      /* 提示文字 */
+      #hint {
+        position: fixed;
+        bottom: 40px;
+        left: 50%;
+        transform: translateX(-50%);
+        background: rgba(0,0,0,0.6);
+        color: #fff;
+        padding: 10px 20px;
+        border-radius: 8px;
+        font-size: 1.1em;
+        z-index: 2000; /* ✅ 提示文字層級最大，永遠在最上 */
+        animation: fadeInOut 3s ease-in-out infinite;
+      }
+
+      @keyframes fadeInOut {
+        0%, 100% { opacity: 1; }
+        50% { opacity: 0.5; }
+      }
+
+      /* SVG 外框層 */
+#frame-svg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 500;   /* ✅ 低於提示文字 */
+  pointer-events: none;
+}
+    </style>
   </head>
   <body>
-    <a-scene>
-      <!-- 相機（稍微後退，方便看模型） -->
-      <a-entity camera position="0 1.6 3"></a-entity>
+    <!-- Loading 畫面 -->
+    <div id="loading-screen">
+      <div class="spinner"></div>
+      <div>正在載入 3D 模型，請稍候...</div>
+    </div>
 
-      <!-- 地板 -->
-      <a-plane rotation="-90 0 0" width="10" height="10" color="#7BC8A4"></a-plane>
+    <!-- SVG 外框 (整合 BG.svg 的內容) -->
+    <svg id="frame-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 285.75 508" preserveAspectRatio="none">
+      <defs id="defs1" />
+      <g id="layer1">
+        <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
+              width="287.49677" height="50.923008" x="-1.6858945" y="-1.1239296" />
+        <rect style="fill:#ffd5d5;stroke-width:19.1694;stroke-linecap:square"
+              width="287.49677" height="50.923008" x="-0.70703161" y="458.04077" />
+        <rect style="fill:#ffd5d5;stroke-width:22.3567;stroke-linecap:square"
+              width="494.83267" height="40.243237" x="9.4845104" y="-285.48715"
+              transform="matrix(0.00105052,0.99999945,-0.99999516,0.00311209,0,0)" />
+        <rect style="fill:#ffd5d5;stroke-width:22.3567;stroke-linecap:square"
+              width="494.83267" height="40.243237" x="10.45767" y="-40.021164"
+              transform="matrix(0.00105052,0.99999945,-0.99999516,0.00311209,0,0)" />
+        <rect style="fill:#ff8080;stroke-width:60.8981;stroke-linecap:square"
+              width="154.70169" height="51.918198" x="67.184807" y="428.0621" />
+        <text style="font-size:32.0642px;fill:#ffd4d4;fill-opacity:1;stroke-width:304.474"
+              x="87.052063" y="442.0806" transform="scale(0.94646367,1.0565646)">捲捲可愛</text>
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:61.7984;stroke-linecap:square"
+              width="4.2573333" height="424.39575" x="248.32335" y="41.787487" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:61.7984;stroke-linecap:square"
+              width="4.2573333" height="424.39575" x="33.008163" y="41.178467" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:57.2492;stroke-linecap:square"
+              width="219.27122" height="6.3640318" x="33.171803" y="40.257904" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:22.1615;stroke-linecap:square"
+              width="32.858273" height="6.3640318" x="219.3349" y="461.49274" />
+        <rect style="fill:#ff8080;fill-opacity:1;stroke-width:22.9667;stroke-linecap:square"
+              width="35.289234" height="6.3640318" x="33.214214" y="461.57034" />
+      </g>
+    </svg>
+    <!-- 提示文字 -->
+    <div id="hint">捲捲胖胖</div>
 
-      <!-- 樹模型 -->
-      <a-entity
-        id="treeModel"
-        gltf-model="models/tree.glb"
-        scale="0.5 0.5 0.5"
-        rotation="90 180 0"
-        position="0 0 0"
-        animation-mixer
-        animation="property: position; dir: alternate; dur: 2000; easing: easeInOutSine; loop: true; to: 0 0.3 0"
+    <!-- AR 場景 -->
+    <a-scene
+      embedded
+      arjs="trackingMethod: best; sourceType: webcam; detectionMode: mono_and_matrix;"
+    >
+      <!-- Marker -->
+      <a-marker
+        preset="hiro"
+        emitevents="true"
+        smooth="true"
+        smoothCount="12"
+        smoothTolerance="0.01"
+        smoothThreshold="5"
+        id="hiroMarker"
       >
-      </a-entity>
+        <a-entity
+          id="treeModel"
+          gltf-model="models/tree.glb"
+          scale="0.5 0.5 0.5"
+          rotation="-90 90 0"
+          position="0 0 0"
+          animation-mixer
+          animation="property: position; dir: alternate; dur: 2000; easing: easeInOutSine; loop: true; to: 0 0.3 0"
+        >
+        </a-entity>
+      </a-marker>
 
-      <!-- 輔助坐標軸（方便確認方向） -->
-      <a-entity axes-helper="size: 2"></a-entity>
+      <!-- Camera -->
+      <a-entity camera></a-entity>
     </a-scene>
 
     <script>
-      // 方向鍵 & Q/E 旋轉控制
-      window.addEventListener("keydown", (e) => {
-        const model = document.querySelector("#treeModel");
-        let rot = Object.assign({}, model.getAttribute("rotation"));
+      const marker = document.querySelector('#hiroMarker');
+      const model = document.querySelector('#treeModel');
+      const loadingScreen = document.querySelector('#loading-screen');
+      let hideTimeout;
 
-        if (e.key === "ArrowLeft")  rot.y -= 10;  // 左轉
-        if (e.key === "ArrowRight") rot.y += 10;  // 右轉
-        if (e.key === "ArrowUp")    rot.x -= 10;  // 向上仰
-        if (e.key === "ArrowDown")  rot.x += 10;  // 向下俯
-        if (e.key === "q")          rot.z -= 10;  // Z 軸逆時針
-        if (e.key === "e")          rot.z += 10;  // Z 軸順時針
+      // 一開始隱藏模型
+      model.setAttribute('visible', false);
 
-        model.setAttribute("rotation", `${rot.x} ${rot.y} ${rot.z}`);
-        console.log("rotation:", rot);
+      // 模型載入完成後 -> 關閉 Loading 畫面
+      model.addEventListener("model-loaded", () => {
+        console.log("模型載入完成");
+        loadingScreen.style.opacity = "0";
+        setTimeout(() => loadingScreen.style.display = "none", 600);
+      });
+
+      function showModel() {
+        clearTimeout(hideTimeout);
+        if (!model.getAttribute('visible')) {
+          model.setAttribute('visible', true);
+          console.log('模型顯示');
+        }
+      }
+
+      function hideModel() {
+        if (model.getAttribute('visible')) {
+          model.setAttribute('visible', false);
+          console.log('模型隱藏');
+        }
+      }
+
+      marker.addEventListener('markerFound', showModel);
+      marker.addEventListener('markerLost', () => {
+        hideTimeout = setTimeout(hideModel, 1000);
       });
     </script>
   </body>
